--- a/style.css
+++ b/style.css
@@ -4,11 +4,9 @@
     padding: 0;
 }
 .container {
-    width: 700px;
+    width: 60%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     margin: auto;
 }
 .box {
