--- a/style.css
+++ b/style.css
@@ -2,15 +2,34 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .container {
-    width: 60%;
+    width: 50%;
+    height: 450px;
     display: flex;
     flex-wrap: wrap;
     margin: auto;
 }
-.box {
-    height: 30px;
-    border: 1px solid black ;
-    flex: calc(6.25%);
+h1 {
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 50px;
+}
+.cont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+button {
+    padding: 10px;
+    background: rgb(37, 122, 219);
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    color: white;
+}
+.clear {
+    margin-left: 20px;
 }
